--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,7 @@
             <p>Você pode me encontrar nas seguintes plataformas:</p>
             <p>Email: <a href="saresende555@gmail.com">saresende555@gmail.com</a></p>
             <p>LinkedIn: <a href="www.linkedin.com/in/yanresendebr" target="_blank">www.linkedin.com/in/yanresendebr</a></p>
-            <p>GitHub: <a href="https://github.com/seuusuario" target="_blank">github.com/seuusuario</a></p>
+            <p>GitHub: <a href="https://github.com/yanresende/" target="_blank">https://github.com/yanresende/</a></p>
         </div>
     </div>
 
